# seal.js

./: .gitignore  CMakeLists.txt  README.md  addon.cc  addon.js  ciphertext.cc  ciphertext.h  decryptor.cc  decryptor.h  encoder.cc  encoder.h  encryptor.cc  encryptor.h  evaluator.cc  evaluator.h  keygenerator.cc  keygenerator.h  myobject.cc  myobject.h  package.json  plaintext.cc  plaintext.h  seal-example.js  sealcontext.cc  sealcontext.h
